feat: support rfc9396 rich authorization requests
